[tool.poetry]
name = "cp-importer"
version = "0.1.0"
description = ""
authors = ["José Muñiz <jose.muniz@cuny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
colorama = "^0.4.5"
shellingham = "^1.4.0"
click = "^8.1.3"
typer = "^0.5.0"
requests = "^2.28.1"
xlsx2csv = "^0.7.8"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
grizzly-cli = "grizzly.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
