[tool.poetry]
name = "grizzly-cli"
version = "0.1.0"
description = ""
authors = ["José Muñiz <jose.muniz@cuny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
colorama = "^0.4.5"
shellingham = "^1.4.0"
click = "^8.1.3"
requests = "^2.28.1"
xlsx2csv = "^0.7.8"
pandas = "^1.4.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
grizzly-cli = "grizzly_cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
